--- a/src/Reports/Reports.form
+++ b/src/Reports/Reports.form
@@ -72,11 +72,7 @@
                   <Component id="showDepartedVehiclePaneButton" alignment="0" max="32767" attributes="0"/>
                   <Component id="dailyReportButton" alignment="0" max="32767" attributes="0"/>
                   <Component id="salesReportButton" alignment="0" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                      <Component id="stockReportButton" max="32767" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="stockReportButton" alignment="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
